[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/LivroSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/notebook.gd" type="Script" id=2]
[ext_resource path="res://sprites/notificacao-caderno.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 95, 106 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 95, 106 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 95, 0, 95, 106 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 190, 0, 95, 106 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 285, 0, 95, 106 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 380, 0, 95, 106 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 380, 0, 95, 106 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 380, 0, 95, 106 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 285, 0, 95, 106 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 190, 0, 95, 106 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 95, 0, 95, 106 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 95, 106 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 13 ) ],
"loop": false,
"name": "closed",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "opening",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": false,
"name": "opened",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "closing",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 164.5, 197 )

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Notificacao-caderno:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 251, -150 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "notificacao"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Notificacao-caderno:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 0.277393, 3.03143 ),
"update": 0,
"values": [ Vector2( 251, -173 ), Vector2( 251, -150 ), Vector2( 251, -173 ) ]
}

[node name="notebook" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -128 )
scale = Vector2( 6, 6 )
frames = SubResource( 12 )
animation = "closed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 133.5, 4 )
shape = SubResource( 15 )

[node name="Notificacao-caderno" type="Sprite" parent="."]
position = Vector2( 251, -163.787 )
scale = Vector2( 1.65843, 1.65843 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "notificacao"
reset_on_save = false
anims/RESET = SubResource( 16 )
anims/notificacao = SubResource( 17 )

[connection signal="input_event" from="." to="." method="_on_notebook_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_notebook_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_notebook_mouse_exited"]
